<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create"
    android:backgroundTint="?attr/colorContainer"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Info"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:layout_marginBottom="54dp"  />

            <EditText
                android:id="@+id/fnEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:background="@drawable/edit"
                android:hint="@string/first_name_hint"
                android:padding="12dp"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorSecondary" />

            <EditText
                android:id="@+id/lnEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:background="@drawable/edit"
                android:hint="@string/last_name_hint"
                android:padding="12dp"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorSecondary" />

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:background="@drawable/edit"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorSecondary" />

            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:background="@drawable/edit"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorSecondary" />

            <EditText
                android:id="@+id/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthdate_hint"
                android:focusable="false"
                android:clickable="true"
                android:textColorHint="?attr/colorSecondary"
                android:textColor="?attr/colorOnBackground"
                android:padding="12dp"
                android:layout_marginBottom="22dp"
                android:background="@drawable/edit"
                android:drawableEnd="@android:drawable/ic_menu_my_calendar" />

            <Button
                android:id="@+id/imagePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:background="@drawable/pickimageoutline"
                android:text="@string/pick_image"
                android:textColor="?attr/colorOnBackground" />

            <Button
                android:id="@+id/btnregiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/register"
                android:background="@drawable/edit"
                android:textColor="?attr/colorOnPrimary" />


        </LinearLayout>


</ScrollView>